# PXL

./: .gitignore  CMakeLists.txt  LISENCE  README.md  build.sh
include/: PXL.h
include/PXL/: PXL.h
src/: PXL.c  init.c  internals.h  main.c
src/window/: window.c
